--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,3 +5,11 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=2
+spring.datasource.hikari.minimumIdle=1
+spring.datasource.hikari.idleTimeout=300000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.leakDetectionThreshold=2000
+logging.level.org.springframework=DEBUG
