--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,14 @@
 spring.datasource.url=jdbc:postgresql://aws-0-us-west-1.pooler.supabase.com:5432/postgres
 spring.datasource.username=postgres.vqnxgyjdrlvsadzfosye
 spring.datasource.password=hoomies2023
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=2
+spring.datasource.hikari.minimumIdle=1
+spring.datasource.hikari.idleTimeout=300000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.leakDetectionThreshold=2000
+logging.level.org.springframework=DEBUG
