[GREEN] Implemented using Cloudinary to store image attribute of each product

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,3 +13,8 @@ spring.datasource.hikari.idleTimeout=300000
 spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.leakDetectionThreshold=2000
 logging.level.org.springframework=DEBUG
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
