--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - staging
       - main
+      - feat/.*
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
